--- a/css/media.css
+++ b/css/media.css
@@ -72,3 +72,24 @@
         margin-right: 0px;
     }
 }
+
+@media (max-width: 768px) {
+    .intro {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .intro::before {
+        width: 200px;
+        height: 200px;
+        background-size: contain; /* Make sure the image and gradient fit */
+        top: auto;
+        bottom: 0;
+        right: 50%;
+        transform: translateX(50%);
+    }
+
+    .intro__text {
+        margin-bottom: 20px;
+    }
+}
