--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,208 +19,126 @@
     font-style: normal;
 }
 
-.container {
-    padding: 0 177px ;
-}
-
-ul.reset,
-ul.reset li,
-ul.reset ul li {
-    margin:0;
-    padding: 0;
-    text-indent: 0;
-    list-style-type: none;
-}
-
 * {
     margin: 0;
     padding: 0;
 }
 
-/* Header */
+/* header */
+
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 41px;
-    padding-bottom: 41px;
-    background-color: #fff;
-    width: 100%;
+    margin: 49px auto;
+    width: 1200px;
 }
 
-.header__container {
-    display: flex;
-    gap: 384px;
-    width: 100%;
-}
-
-.header__logo {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-    width: 112px;
-    height: 75px;
-}
-
-.header__logo-text {
-    font-family: 'DM Sans', sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    margin: 0;
-}
-
-.header__logo-highlight {
-    background: linear-gradient(90deg, #13B0F5, #E70FAA);
-    -webkit-background-clip: text;
-    color: transparent;
-    font-weight: bold;
-}
-
-.header__logo-subtext {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    color: rgba(66, 68, 110, 1);
-    font-size: 16px;
-    margin-left: 5px;
-}
-
-/* Navigation Menu */
-.header__nav {
-    display: flex;
-    align-items: center;
-}
-
-.header__menu {
+.nav {
+    float: right;
     list-style: none;
-    display: flex;
-    gap: 30px;
 }
 
-.header__menu-item {
-    margin-right: 40px;
+.nav .nav__item {
+    margin-top: 8px;
+    position: relative;
+    float: left;
+    margin-right: 60px;
 }
 
-.header__text {
-    font-family: "DM Sans", "serif";
+.nav .nav__item--contact {
+    margin-top: 8px;
+    position: relative;
+    float: left;
+}
+
+.nav li a {
+    color: rgba(102, 102, 102, 1);
     font-size: 20px;
-    font-style: normal;
     font-weight: 500;
-    line-height: 26px; /* 130% */
-}
-
-.header__menu-item a {
-    font-family: 'DM Sans', sans-serif;
-    font-weight: 500;
-    font-size: 25px;
-    color: rgba(66, 68, 110, 1);
+    font-family: "DM Sans", "serif";
     text-decoration: none;
 }
 
-.header__menu-item a:hover {
-    color: #13B0F5;
-}
-
-.header__menu-item:nth-last-child(2){
-    margin-right: 0;
-}
-
-/* Social Icons */
-.header__menu-item--social {
-    display: flex;
-    align-items: center;
-}
-
-.header__social-icon {
-    width: 33px;
-    height: 31px;
-    margin-left: 30px;
-    filter: grayscale(100%);
-    transition: filter 0.3s ease;
-}
-
-.header__social-icon:hover {
-    filter: none;
-}
-
-/* Intro Section */
-.intro {
-    display: flex;
-    padding: 279px 0 0 36px;;
+.nav__item--social {
+    margin-top: 2px;
     position: relative;
+    float: left;
+    margin-left: 45px;
+}
+
+.nav__item--social img {
+    margin-left: 13px;
+    cursor: pointer;
+}
+
+.intro {
+    width: 1200px;
+    display: flex;
+    margin: 220px auto 0;
+    justify-content: space-between;
+}
+
+/* intro */
+
+.intro__text,
+.intro__detail,
+.intro__name,
+.intro__greeting {
+    display: block;
 }
 
 .intro__text {
-    flex: 1;
-    font-family: "Poppins", sans-serif;
+    margin-top: 45px;
+    width: 620px;
+    font-family: "Poppins", "serif";
     font-weight: 700;
-    font-size: 70px;
-    line-height: 87px;
+    font-size: 58px;
+    line-height: 70px;
     color: rgba(66, 68, 110, 1);
-    z-index: 1;
 }
 
-.intro__highlight {
-    font-family: "Poppins", sans-serif;
+.gradient-text {
+    font-family: "Poppins", "serif";
     font-weight: 700;
-    font-size: 67px;
+    font-size: 58px;
     line-height: 70px;
     background: linear-gradient(90deg, #13B0F5 -2.06%, #E70FAA 220%);
-    -webkit-background-clip: text;
+    background-clip: text;
     color: transparent;
 }
 
-.intro__emoji {
-    width: 40px;
-    vertical-align: middle;
-    margin-right: 5px;
-}
+/* tech-stack */
 
-.intro::before {
-    content: "";
-    position: absolute;
-    top: 73%;
-    right: 255px;
-    transform: translateY(-50%);
-    width: 439px;
-    height: 439px;
-    background: linear-gradient(135deg, #13B0F5, #E70FAA);
-    background-size: cover;
-    z-index: 0;
-    background-image: url(../img/pavan.png);
-}
-
-/* Tech Stack Section */
 .tech-stack {
-    padding-top: 445px;
-    /*width: 1200px;*/
-    /*margin: 0 auto;*/
-    /*margin-top: 320px;*/
+    width: 1200px;
+    margin: 320px auto 0;
 }
+
 .tech-stack__title {
     text-align: center;
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 700;
     font-size: 48px;
     line-height: 26px;
     color: rgba(66, 68, 110, 1);
 }
+
 .tech-stack__description {
     text-align: center;
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 400;
     font-size: 32px;
     line-height: 26px;
     color: rgba(102, 102, 102, 1);
     margin-top: 50px;
 }
+
 .tech-stack__grid {
     display: grid;
-    grid-template-columns: repeat(6, 200px);
-    margin-top: 194px;
-    padding-left: 18px;
-    gap: 68px;
+    width: 1200px;
+    grid-template-columns: 200px 200px 200px 200px 200px 200px;
+    margin-top: 100px;
 }
-.tech-stack__grid-item {
+
+.tech-stack__grid div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -228,95 +146,51 @@ ul.reset ul li {
     height: 200px;
 }
 
-.tech-stack__icon {
-    width: 198px;
-    height: 140px;
+.tech-stack__list {
+    text-decoration: none;
+    list-style: none;
 }
 
-/* Projects Section */
+/* Project */
+
 .projects {
-    padding-top: 200px;
+    width: 1200px;
+    margin: 200px auto 0;
 }
-.project {
-    width: 449px;
-    height: 684px;
-    box-shadow: 2px 2px 100px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
+
+.projects__title {
+    text-align: center;
+    font-family: "Poppins", "serif";
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 26px;
+    color: rgba(66, 68, 110, 1);
 }
-.project__image {
-    width: 450px;
+
+.projects__description {
+    text-align: center;
+    font-family: "Poppins", "serif";
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 26px;
+    color: rgba(102, 102, 102, 1);
+    margin-top: 50px;
 }
+
 .projects__grid {
     display: grid;
-    grid-template-columns: repeat(3, 375px);
-    column-gap: 129px;
-    row-gap: 75px;
-    margin-top: 118px;
-    padding-left: 55px;
+    grid-template-columns: 375px 375px 375px;
+    column-gap: 37px;
+    row-gap: 50px;
+    margin-top: 100px;
 }
-.projects__item {
+.projects__grid div {
     width: 375px;
     height: 567px;
     box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
 }
-.projects__title {
-    width: 314px;
-    font-family: "Poppins";
-    font-weight: 500;
-    font-size: 66px;
-    line-height: 26px;
-    margin: 20px auto 0;
-    color: rgba(0, 0, 0, 1);
-}
-.projects__description {
-    width: 466px;
-    font-family: "Poppins";
-    font-weight: 300;
-    font-size: 38px;
-    line-height: 26px;
-    margin: 16px auto 0;
-    color: rgba(102, 102, 102, 1);
-    padding-top: 80px;
-}
-.projects__stack {
-    width: 314px;
-    font-family: "Poppins";
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26px;
-    color: rgba(66, 68, 110, 1);
-    margin: 15px auto 0;
-}
-.projects__stack-item {
-    font-family: "Poppins";
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 26px;
-    color: rgba(66, 68, 110, 1);
-}
-
-.projects__links {
-    width: 314px;
-    margin: 15px auto 0;
-}
-.projects__link {
-    font-family: "Poppins";
-    font-weight: 400;
-    font-size: 16px;
-    color: rgba(0, 0, 0, 1);
-    margin-left: 30px;
-}
-.projects__link--live {
-    position: absolute;
-    margin-top: 2px;
-}
-.projects__link--code {
-    position: absolute;
-    margin-top: 3px;
-    margin-left: 50px;
-}
-.project__title {
+.project__name {
     width: 314px;
     font-family: "Poppins";
     font-weight: 500;
@@ -326,20 +200,17 @@ ul.reset ul li {
     margin-top: 20px;
     color: rgba(0, 0, 0, 1);
 }
-.project__description {
-        width: 314px;
-        font-family: "Poppins";
-        font-weight: 300;
-        font-size: 18px;
-        line-height: 26px;
-        margin: 0px auto;
-        margin-top: 16px;
-        color: rgba(102, 102, 102, 1);
+.project__details {
+    width: 314px;
+    font-family: "Poppins";
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 26px;
+    margin: 0px auto;
+    margin-top: 16px;
+    color: rgba(102, 102, 102, 1);
 }
-.project__link {
-    margin-right: 52px;
-}
-.project__stack {
+.project__tech-stack {
     width: 314px;
     font-family: "Poppins";
     font-weight: 400;
@@ -349,171 +220,145 @@ ul.reset ul li {
     margin: 0px auto;
     margin-top: 15px;
 }
+.project__technologies {
+    font-family: "Poppins";
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 26px;
+    color: rgba(66, 68, 110, 1);
+}
+
 .project__links {
     width: 314px;
     margin: 0px auto;
     margin-top: 15px;
-}
-.list-reset {
     text-decoration: none;
-    color: rgba(66, 68, 110, 1);
+    list-style: none;
+}
+.project-link__chain a {
+    font-family: "Poppins";
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 1);
+    margin-left: 30px;
+    text-decoration: none;
+    list-style: none;
+}
+.project__link--live {
+    position: absolute;
+    margin-top: 2px;
+}
+.project__link--code {
+    position: absolute;
+    margin-top: 3px;
+    margin-left: 50px;
+}
+.project-link__git a {
+    font-family: "Poppins";
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 1);
+    margin-left: 80px;
+    text-decoration: none;
+    list-style: none;
 }
 
+/* footer */
 
-/* Footer Section */
 .footer {
-    margin: 0 auto;
-    margin-top: 200px;
+    margin: 200px auto 0;
     width: 1200px;
 }
-.footer__info {
+
+.footer__contacts {
     position: relative;
     display: flex;
     float: right;
     margin-top: 20px;
+
 }
-.footer__contact {
-    font-family: "DM Sans";
+.footer__phone {
+    font-family: "DM Sans", "serif";
     font-weight: 400;
     font-size: 18px;
     line-height: 26px;
     cursor: pointer;
+    text-decoration: none;
+    color: #42446E;
 }
 .footer__email {
-    font-family: "DM Sans";
+    font-family: "DM Sans", "serif";
     font-weight: 400;
     font-size: 18px;
     line-height: 26px;
     margin-left: 60px;
     margin-right: 70px;
     cursor: pointer;
+    text-decoration: none;
+    color: #42446E;
 }
+
+.footer__social-icons {
+    text-decoration: none;
+}
+
 .footer__social-icons img {
     margin-left: 13px;
     cursor: pointer;
 }
-.footer__border {
+#border {
     width: 1200px;
     height: 2px;
     opacity: 30%;
     background-color: rgba(102, 102, 102, 1);
-    margin: 40px 0 50px;
+    margin-bottom: 50px;
+    margin-top: 40px;
 }
+
 .footer__menu {
     float: left;
     list-style: none;
     margin-bottom: 50px;
 }
-.footer__menu-item {
+.footer__menu li {
     position: relative;
     float: left;
 }
-.footer__menu-item a {
-    font-family: "DM Sans";
+.footer__menu li a {
+    font-family: "DM Sans", "serif";
     font-weight: 400;
     font-size: 18px;
     text-decoration: none;
     color: rgba(66, 68, 110, 1);
     margin-right: 50px;
 }
-.footer__credit {
+.footer__menu li .gies {
+    font-family: "DM Sans", "serif";
+    font-weight: 400;
+    font-size: 18px;
+    text-decoration: none;
+    color: rgba(66, 68, 110, 1);
+    margin-right: 50px;
+}
+.footer__credits {
     float: right;
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 400;
     font-size: 18px;
     color: rgba(21, 20, 57, 0.4);
 }
-.footer__credit--highlight {
+.footer__author {
     background: linear-gradient(90deg, #7D60D0 -0.01%, #E70FAA 300%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
     background-clip: text;
     color: transparent;
 }
-.footer__credit--love {
+.footer__love {
     background: linear-gradient(90deg, #7D60D0 5.01%, #E70FAA 120.06%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
     background-clip: text;
     color: transparent;
 }
-.footer__credit--coffee {
+.footer__coffee {
     background: linear-gradient(90deg, #7D60D0 0.01%, #E70FAA -0.06%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
     background-clip: text;
     color: transparent;
-}
-
-/* Media Queries */
-@media (max-width: 1200px) {
-    .header {
-        width: 1000px;
-    }
-    .intro {
-        width: 1000px;
-    }
-    .tech-stack {
-        width: 800px;
-    }
-    .tech-stack__grid {
-        width: 800px;
-        grid-template-columns: repeat(4, 200px);
-    }
-    .projects {
-        width: 800px;
-    }
-    .projects__grid {
-        grid-template-columns: repeat(2, 375px);
-    }
-    .footer {
-        width: 1000px;
-    }
-    .footer__border {
-        width: 1000px;
-    }
-    .footer__menu {
-        width: 400px;
-    }
-    .footer__menu-item--contact {
-        margin-left: 60px;
-        margin-top: 10px;
-    }
-}
-
-@media (max-width: 1000px) {
-    .header {
-        width: 800px;
-    }
-    .header__menu-item {
-        margin-right: 25px;
-    }
-    .header__social-icons {
-        margin-left: 25px;
-    }
-    .header__menu-item a {
-        font-size: 22px;
-    }
-    .intro {
-        width: 800px;
-    }
-    .intro__text {
-        width: 433px;
-        font-size: 40px;
-    }
-    .intro__highlight {
-        font-size: 40px;
-    }
-    .footer {
-        width: 800px;
-    }
-    .footer__border {
-        width: 800px;
-    }
-    .footer__menu {
-        width: 330px;
-    }
-    .footer__menu-item--contact {
-        margin-right: 0;
-    }
 }
