--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -187,41 +187,41 @@
 .projects__grid div {
     width: 375px;
     height: 567px;
-    box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 100px 0 rgba(0, 0, 0, 0.2);
     border-radius: 20px;
 }
 .project__name {
     width: 314px;
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 500;
     font-size: 28px;
     line-height: 26px;
-    margin: 0px auto;
+    margin: 0 auto;
     margin-top: 20px;
     color: rgba(0, 0, 0, 1);
 }
 .project__details {
     width: 314px;
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 300;
     font-size: 18px;
     line-height: 26px;
-    margin: 0px auto;
+    margin: 0 auto;
     margin-top: 16px;
     color: rgba(102, 102, 102, 1);
 }
 .project__tech-stack {
     width: 314px;
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
     color: rgba(66, 68, 110, 1);
-    margin: 0px auto;
+    margin: 0 auto;
     margin-top: 15px;
 }
 .project__technologies {
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 300;
     font-size: 14px;
     line-height: 26px;
@@ -230,13 +230,13 @@
 
 .project__links {
     width: 314px;
-    margin: 0px auto;
+    margin: 0 auto;
     margin-top: 15px;
     text-decoration: none;
     list-style: none;
 }
 .project-link__chain a {
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 400;
     font-size: 16px;
     color: rgba(0, 0, 0, 1);
@@ -254,7 +254,7 @@
     margin-left: 50px;
 }
 .project-link__git a {
-    font-family: "Poppins";
+    font-family: "Poppins", "serif";
     font-weight: 400;
     font-size: 16px;
     color: rgba(0, 0, 0, 1);
@@ -306,12 +306,11 @@
     margin-left: 13px;
     cursor: pointer;
 }
-#border {
-    width: 1200px;
-    height: 2px;
-    opacity: 30%;
-    background-color: rgba(102, 102, 102, 1);
+
+.footer__bottom {
+    padding-top: 40px;
     margin-bottom: 50px;
+    border-top: 2px solid rgba(102, 102, 102, 0.3);
     margin-top: 40px;
 }
 
@@ -320,10 +319,12 @@
     list-style: none;
     margin-bottom: 50px;
 }
+
 .footer__menu li {
     position: relative;
     float: left;
 }
+
 .footer__menu li a {
     font-family: "DM Sans", "serif";
     font-weight: 400;
@@ -332,6 +333,7 @@
     color: rgba(66, 68, 110, 1);
     margin-right: 50px;
 }
+
 .footer__menu li .gies {
     font-family: "DM Sans", "serif";
     font-weight: 400;
@@ -340,6 +342,7 @@
     color: rgba(66, 68, 110, 1);
     margin-right: 50px;
 }
+
 .footer__credits {
     float: right;
     font-family: "Poppins", "serif";
@@ -347,16 +350,19 @@
     font-size: 18px;
     color: rgba(21, 20, 57, 0.4);
 }
+
 .footer__author {
     background: linear-gradient(90deg, #7D60D0 -0.01%, #E70FAA 300%);
     background-clip: text;
     color: transparent;
 }
+
 .footer__love {
     background: linear-gradient(90deg, #7D60D0 5.01%, #E70FAA 120.06%);
     background-clip: text;
     color: transparent;
 }
+
 .footer__coffee {
     background: linear-gradient(90deg, #7D60D0 0.01%, #E70FAA -0.06%);
     background-clip: text;
